--- a/vignettes/articles/land_ocean_warming.Rmd
+++ b/vignettes/articles/land_ocean_warming.Rmd
@@ -4,12 +4,19 @@ title: "Land Ocean Warming"
 
 ## Introduction
 
-Hector uses DOECLIM^[Kriegler, E. (2005). Imprecise probability analysis for integrated assessment of climate change. Ph.D. thesis. Potsdam URL: Universität Potsdam. https://www.pik‐potsdam.de/members/edenh/theses/PhDKriegler.pdf], a diffusion ocean-energy balance, to calculate mean global air temperature from sea-surface and land-surface temperature anomalies. 
-DOECLIM can simulate the different rates of warming over land and ocean surfaces, meaning that the land-ocean warming ratio is an emergent property of Hector. 
-However, users also have the option to provide a land-ocean warming ratio to be used in place of DOECLIM’s internal calculations. 
-This enables Hector to emulate the land-ocean warming dynamics of specific Earth System Models. 
+Hector uses DOECLIM^[Kriegler, E. (2005). Imprecise probability analysis for 
+integrated assessment of climate change. Ph.D. thesis. Potsdam URL: Universität Potsdam. https://www.pik‐potsdam.de/members/edenh/theses/PhDKriegler.pdf], a diffusion 
+ocean-energy balance, to calculate mean global air temperature from sea-surface 
+and land-surface temperature anomalies. 
+DOECLIM can simulate the different rates of warming over land and ocean surfaces,
+meaning that the land-ocean warming ratio is an emergent property of Hector. 
+However, users also have the option to provide a land-ocean warming ratio to be
+used in place of DOECLIM’s internal calculations. 
+This enables Hector to emulate the land-ocean warming dynamics of specific Earth 
+System Models. 
 
-This vignette demonstrates how providing a user-defined land-ocean warming ratio can affect Hector output. 
+This vignette demonstrates how providing a user-defined land-ocean warming ratio 
+can affect Hector output. 
 
 ## Setup
 
@@ -22,7 +29,8 @@ theme_set(theme_bw(base_size = 14))
 
 ## Run default Hector 
 
-Complete a default run of Hector, one that uses DOECLIM to calculate land and ocean air temperature. 
+Complete a default run of Hector, one that uses DOECLIM to calculate land and
+ocean air temperature. 
 
 ```{r}
 years_to_keep <- 1850:2100
@@ -34,7 +42,8 @@ core    <- newcore(inifile)
 run(core, max(years_to_keep))
 out1 <- fetchvars(core, years_to_keep, vars_to_keep)
 out1$scenario <- "default"
-out1$variable <- paste0(gsub(out1$variable, pattern = "_", replacement = " "), " (", out1$units, ")")
+out1$variable <- paste0(gsub(out1$variable, pattern = "_", replacement = " "),
+                        " (", out1$units, ")")
 ```
 
 ```{r}
@@ -49,7 +58,8 @@ ggplot(data = out1) +
 
 ## Run Hector with different land ocean warming ratios 
 
-Start by writing a function to help us set the land ocean warming ratio, run hector, and fetch some results.
+Start by writing a function to help us set the land ocean warming ratio, 
+run Hector, and fetch some results.
 
 ```{r}
 # Helper function that runs a Hector core with a new land-ocean warming ratio. 
@@ -60,27 +70,29 @@ Start by writing a function to help us set the land ocean warming ratio, run hec
 # Return: data frame of Hector results
 run_with_lo <- function(hc, value){
     
-    # Set the land ocean warming ratio. 
+    # Set the land ocean warming ratio
     setvar(hc, NA, LO_WARMING_RATIO(), value, getunits(LO_WARMING_RATIO()))
     
     # Reset and run Hector
     reset(hc)
     run(hc)
     
-    # Fetch and format the output. 
+    # Fetch and format the output
     out <- fetchvars(hc, years_to_keep, vars_to_keep)
     out$scenario <- value
-    out$variable <- paste0(gsub(out$variable, pattern = "_", replacement = " "), " (", out$units, ")")
+    out$variable <- paste0(gsub(out$variable, pattern = "_", replacement = " "),
+                           " (", out$units, ")")
     
     return(out)
 }
 
-# Make a vector of the land ocean warming ratios to test out. 
+# Make a vector of the land ocean warming ratios to test out
 lo_to_use <- seq(from = 1, to = 2.5, length.out = 20)
 
-# Apply our helper function to the various land ocean warming ratio values & concatenate the results into a single data frame.
+# Apply our helper function to the various land ocean warming ratio values and
+# concatenate the results into a single data frame
 results_list <- lapply(lo_to_use, run_with_lo, hc = core)
-hector_lo_results <- do.call(results_list, what = "rbind") 
+hector_lo_results <- do.call(results_list, what = "rbind")
 ```
 
 
@@ -98,7 +110,6 @@ ggplot(data = hector_lo_results) +
     theme(axis.text.x = element_text(angle = 90)) + 
     guides(color = guide_legend(title = "lo ratio"))
 ```
-
 
 ## Compare default Hector with user provided land ocean warming ratio
 
